lambc_parse/src/snapshots/lambc_parse__parse__tests__parse_nested_blocks-2.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_atom()
---
Ok(
    Block(
        Block {
            statements: [
                Define(
                    Define {
                        ident: Ident {
                            raw: "x",
                            span: Span {
                                start: 2,
                                end: 3,
                            },
                        },
                        value: I64(
                            I64Lit {
                                base: Dec,
                                value: "2",
                                span: Span {
                                    start: 7,
                                    end: 8,
                                },
                            },
                        ),
                        span: Span {
                            start: 2,
                            end: 9,
                        },
                    },
                ),
            ],
            value: Some(
                Block(
                    Block {
                        statements: [
                            Define(
                                Define {
                                    ident: Ident {
                                        raw: "x",
                                        span: Span {
                                            start: 12,
                                            end: 13,
                                        },
                                    },
                                    value: I64(
                                        I64Lit {
                                            base: Dec,
                                            value: "2",
                                            span: Span {
                                                start: 17,
                                                end: 18,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 12,
                                        end: 19,
                                    },
                                },
                            ),
                        ],
                        value: Some(
                            Block(
                                Block {
                                    statements: [
                                        Define(
                                            Define {
                                                ident: Ident {
                                                    raw: "x",
                                                    span: Span {
                                                        start: 22,
                                                        end: 23,
                                                    },
                                                },
                                                value: Block(
                                                    Block {
                                                        statements: [],
                                                        value: Some(
                                                            I64(
                                                                I64Lit {
                                                                    base: Dec,
                                                                    value: "2",
                                                                    span: Span {
                                                                        start: 29,
                                                                        end: 30,
                                                                    },
                                                                },
                                                            ),
                                                        ),
                                                        span: Span {
                                                            start: 27,
                                                            end: 32,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 22,
                                                    end: 33,
                                                },
                                            },
                                        ),
                                    ],
                                    value: None,
                                    span: Span {
                                        start: 20,
                                        end: 35,
                                    },
                                },
                            ),
                        ),
                        span: Span {
                            start: 10,
                            end: 37,
                        },
                    },
                ),
            ),
            span: Span {
                start: 0,
                end: 39,
            },
        },
    ),
)
