lambc_parse/src/snapshots/lambc_parse__parse__tests__parse_nested_blocks.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_atom()
---
Ok(
    Block(
        Block {
            statements: [],
            value: Some(
                Block(
                    Block {
                        statements: [],
                        value: Some(
                            Block(
                                Block {
                                    statements: [],
                                    value: None,
                                    span: Span {
                                        start: 4,
                                        end: 7,
                                    },
                                },
                            ),
                        ),
                        span: Span {
                            start: 2,
                            end: 9,
                        },
                    },
                ),
            ),
            span: Span {
                start: 0,
                end: 11,
            },
        },
    ),
)
