lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_array_pattern-2.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_array_pattern()
---
Ok(
    Array(
        ArrayPattern {
            patterns: [
                Pattern {
                    inner: [
                        Literal(
                            I64(
                                I64Lit {
                                    base: Dec,
                                    value: "1",
                                    span: Span {
                                        start: 1,
                                        end: 2,
                                    },
                                },
                            ),
                        ),
                    ],
                    span: Span {
                        start: 1,
                        end: 2,
                    },
                },
                Pattern {
                    inner: [
                        Literal(
                            I64(
                                I64Lit {
                                    base: Dec,
                                    value: "2",
                                    span: Span {
                                        start: 4,
                                        end: 5,
                                    },
                                },
                            ),
                        ),
                    ],
                    span: Span {
                        start: 4,
                        end: 5,
                    },
                },
            ],
            span: Span {
                start: 0,
                end: 6,
            },
        },
    ),
)
