lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_array_pattern-3.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_array_pattern()
---
Ok(
    Array(
        ArrayPattern {
            patterns: [
                Pattern {
                    inner: [
                        Array(
                            ArrayPattern {
                                patterns: [
                                    Pattern {
                                        inner: [
                                            Array(
                                                ArrayPattern {
                                                    patterns: [],
                                                    span: Span {
                                                        start: 2,
                                                        end: 4,
                                                    },
                                                },
                                            ),
                                        ],
                                        span: Span {
                                            start: 2,
                                            end: 4,
                                        },
                                    },
                                ],
                                span: Span {
                                    start: 1,
                                    end: 5,
                                },
                            },
                        ),
                    ],
                    span: Span {
                        start: 1,
                        end: 5,
                    },
                },
            ],
            span: Span {
                start: 0,
                end: 6,
            },
        },
    ),
)
