lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_array_pattern.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_array_pattern()
---
Ok(
    Array(
        ArrayPattern {
            patterns: [],
            span: Span {
                file: FileId(
                    0,
                ),
                start: 0,
                end: 2,
            },
        },
    ),
)
