lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_atom-11.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_atom()
---
Ok(
    List(
        List {
            values: [
                Nil(
                    NilLit {
                        span: Span {
                            file: FileId(
                                0,
                            ),
                            start: 1,
                            end: 4,
                        },
                    },
                ),
                I64(
                    I64Lit {
                        base: Dec,
                        value: "2",
                        span: Span {
                            file: FileId(
                                0,
                            ),
                            start: 6,
                            end: 7,
                        },
                    },
                ),
                String(
                    StrLit {
                        text: Some(
                            StrText {
                                inner: "hello",
                                span: Span {
                                    file: FileId(
                                        0,
                                    ),
                                    start: 10,
                                    end: 15,
                                },
                            },
                        ),
                        span: Span {
                            file: FileId(
                                0,
                            ),
                            start: 9,
                            end: 16,
                        },
                    },
                ),
            ],
            span: Span {
                file: FileId(
                    0,
                ),
                start: 0,
                end: 17,
            },
        },
    ),
)
