lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_atom-14.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_atom()
---
Ok(
    Path(
        Path {
            head: Ident {
                raw: "one",
                span: Span {
                    start: 0,
                    end: 3,
                },
            },
            tail: [
                Ident {
                    raw: "two",
                    span: Span {
                        start: 5,
                        end: 8,
                    },
                },
                Ident {
                    raw: "three",
                    span: Span {
                        start: 10,
                        end: 15,
                    },
                },
            ],
            span: Span {
                start: 0,
                end: 15,
            },
        },
    ),
)
