lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_atom-2.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_atom()
---
Ok(
    Bool(
        BoolLit {
            value: false,
            span: Span {
                file: FileId(
                    0,
                ),
                start: 0,
                end: 5,
            },
        },
    ),
)
