lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_atom-3.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_atom()
---
Ok(
    F64(
        F64Lit {
            value: "2.0e2",
            span: Span {
                file: FileId(
                    0,
                ),
                start: 0,
                end: 5,
            },
        },
    ),
)
